@@ -1,0 +1,6 @@
+#\#CIF_2.0
+data_table
+_tag
+[
+  { 'key': 'value' },
+]
