@@ -49,7 +49,9 @@ cod-tools (unreleased)
     - cif_split:
       - appending mode.
     - codcif:
-      - no longer allowing '[dD]' symbols in CIF numbers.
+      - no longer allowing '[dD]' symbols in CIF numbers;
+      - requiring closing braces of CIF2 tables and lists be followed by
+        other closing braces or whitespace.
     - replaced 'can not' with 'cannot' in all affected scripts and modules;
     - replaced the '\d' group with explicit '[0-9]' in regular expressions
       in all affected scripts and modules.
